--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,20 +2,23 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-
 [project]
-name = "create-fastapi-app"
+name = "create-fastapi"
 description = "create-fastapi-app"
 readme = "README.md"
-version = "0.0.1"
+version = "0.0.8"
 
-authors = [
-    { name = "Shahar Luftig", email = "shaharluftig@gmail.com" },
-]
+authors = [{ name = "Shahar Luftig", email = "shaharluftig@gmail.com" }]
 license = { file = "LICENSE" }
 requires-python = ">=3.7"
 
-keywords = ["backend", "fastapi", "create-app", "create-fastapi-app"]
+keywords = [
+    "backend",
+    "fastapi",
+    "create-app",
+    "create-fastapi-app",
+    "create-fatapi",
+]
 classifiers = [
     "Intended Audience :: Science/Research",
     "Operating System :: OS Independent",
@@ -30,11 +33,11 @@ classifiers = [
     "Topic :: Scientific/Engineering",
 ]
 
-dependencies = [
-    "typer~=0.9.0",
-    "virtualenv~=20.24.1",
-    "GitPython~=3.1.32",
-]
+dependencies = ["typer~=0.9.0", "virtualenv~=20.24.1", "GitPython~=3.1.32"]
 
 [project.urls]
 "Homepage" = "https://github.com/shaharluftig/create-fastapi-app"
+
+
+[project.scripts]
+create-fastapi-app = "cfa.cli:main_cli"
